# my-tui-template

./: Cargo.toml
src/: main.rs  tui_app.rs
